# mtg-decklist-checker

./: README.md  pyproject.toml
src/: config.ini  list_parser.py  main.py
src/api/routes/: card_legality.py
src/list_checker/: db_syncer.py  legality_checker.py  list_comparer.py  list_parser.py  utils.py
tests/: test_card_legality.py  test_db_syncer.py  test_legality_checker.py  test_list_comparer.py  test_list_parser.py  test_main.py  test_parser.py  test_utils.py
tests/test_data/: pauper_banlist_2025_12_25.txt  test_list_mono_red.txt
tests/test_resources/: test_card_list.json
