[project]
name = "mtg-listchecker"
version = "0.1.0"
description = "An application for checking if a decklist is legal in a given format. Compares cards in Decklist to current banlist for the given format."
authors = [
    {name = "Falk358",email = "falk358.chewer001@passinbox.com"}
]
license = {text = "Apache v2"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


