[project]
name = "mtg-listchecker"
version = "0.1.0"
description = "An application for checking if a decklist is legal in a given format. Compares cards in Decklist to current banlist for the given format."
authors = [
    {name = "Falk358",email = "falk358.chewer001@passinbox.com"}
]
license = {text = "Apache v2"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "fastapi[standard]>=0.128.2",
    "httpx>=0.28.1",
    "ijson>=3.4.0.post0",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "sqlalchemy>=2.0.45",
    "ty>=0.0.15",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]



[tool.pytest.ini_options]
pythonpath = "src"
